Fixed some header includes
- popen.cpp was using TIMEMORY_WINDOWS but no include
- updated RTD to use python 3.7
- ring buffer optional mmap
- docs updates

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -114,6 +114,7 @@ build_script:
   - cmake .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
     -DBUILD_SHARED_LIBS="%BUILD_SHARED%"
     -DBUILD_STATIC_LIBS="%BUILD_STATIC%"
+    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
     -DCMAKE_BUILD_TYPE="%CONFIG%"
     -DCMAKE_CXX_STANDARD="%CPP%"
     -DCMAKE_INSTALL_PREFIX=..\install-timemory
