Fixes to Windows + CUDA builds
- Removed NVTX_LIBRARY requirement for NVTX_FOUND
- Fixed CUDA w/o NVTX builds (happens on windows + conda-forge)
- Updated CHANGELOG
- Bumped version to 3.2.4
- Fix to applying TIMEMORY_USE_NVTX
- Fixed documentation build

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - pillow
   - pip
   - setuptools
-  - breathe
+  - breathe <4.30.0
+  - sphinx <4.0.0
   - sphinx-markdown-tables
   - docutils
-  
