ex_kernel_instrumentation_v3 + cmake updates
- Added ex_kernel_instrumentation_v3
  - does not require modifying kernel call
- TIMEMORY_BUILD_LTO fixes (cmake)
- TIMEMORY_SAVE_VARIABLES fixes (cmake)
- TIMEMORY_RESTORE_VARIABLES fixes (cmake)
- Removed disabling CMAKE_INTERPROCEDURAL_OPTIMIZATION from examples (cmake)
- fixed compiler-instrumentation + LTO (cmake)

--- a/examples/ex-gpu/CMakeLists.txt
+++ b/examples/ex-gpu/CMakeLists.txt
@@ -33,9 +33,12 @@ if(NOT CMAKE_CUDA_COMPILER)
     set_source_files_properties(${sources} PROPERTIES LANGUAGE CXX)
 endif()
 
-add_executable(ex_gpu_event ex_gpu_event.cu)
-target_link_libraries(ex_gpu_event PRIVATE timemory-gpu-example logging)
-install(TARGETS ex_gpu_event DESTINATION bin OPTIONAL)
+if(TIMEMORY_USE_CUDA)
+    # hasn't been ported yet
+    add_executable(ex_gpu_event ex_gpu_event.cu)
+    target_link_libraries(ex_gpu_event PRIVATE timemory-gpu-example logging)
+    install(TARGETS ex_gpu_event DESTINATION bin OPTIONAL)
+endif()
 
 add_executable(ex_kernel_instrument ex_kernel_instrument.cu)
 target_link_libraries(ex_kernel_instrument PRIVATE timemory-gpu-example)
@@ -44,3 +47,7 @@ install(TARGETS ex_kernel_instrument DESTINATION bin OPTIONAL)
 add_executable(ex_kernel_instrument_v2 ex_kernel_instrument_v2.cu)
 target_link_libraries(ex_kernel_instrument_v2 PRIVATE timemory-gpu-example)
 install(TARGETS ex_kernel_instrument_v2 DESTINATION bin OPTIONAL)
+
+add_executable(ex_kernel_instrument_v3 ex_kernel_instrument_v3.cu)
+target_link_libraries(ex_kernel_instrument_v3 PRIVATE timemory-gpu-example)
+install(TARGETS ex_kernel_instrument_v3 DESTINATION bin OPTIONAL)
