New components + likwid fixes + performance improvement + other
- cpack support
- perfetto_trace component
- timestamp component
- printer component
- ring_buffer_allocator
- use ring buffer in bundles
- use ring_buffer_allocator in graph
- removed TIMEMORY_HOT_INLINE
- non-templated component::internal::user_bundle
- perfetto_category type-trait
- added ability to update statistics w/o popping
- removed runtime_enabled checks in add_secondary
- removed runtime_enabled check in audit
- fixed PAPI and LIKWID find package scripts
- updates to ex_cxx_overhead
- python tracer now has correct statistics
- ring_buffer_tests
- statistics tests
- update_stats in opaque
- vector_map in data_tracker
- BUG FIX: likwid_markerClose
- BUG FIX: likwid_nvmarkerClose
- policy::record_statistics::apply -> operator()
- removed TIMEMORY_NOCLONE usage
- deleted graph copy ctor and graph copy assign
- significant improvements to ring_buffer
- perfetto support in compiler instrumentation
- removed exit instrumentation in timemory-run

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0042 NEW)
 cmake_policy(SET CMP0053 NEW)
 cmake_policy(SET CMP0063 NEW)
+cmake_policy(SET CMP0069 NEW)
 if(NOT CMAKE_VERSION VERSION_LESS 3.13)
     cmake_policy(SET CMP0077 NEW)
     cmake_policy(SET CMP0079 NEW)
@@ -150,22 +151,10 @@ if(TIMEMORY_BUILD_DEVELOPER OR TIMEMORY_USE_CTP)
             timemory-compile-time
             LINK
             ANALYZER_OPTIONS
-            -s
-            "${PROJECT_BINARY_DIR}/"
-            "${PROJECT_SOURCE_DIR}/"
-            -f
-            "lang-all"
-            "so"
-            "a"
-            "dylib"
-            "dll"
-            -i
-            ".*(_tests)$"
-            "^(ex_).*"
-            -e
-            "^(@rpath).*"
-            "^(/usr)"
-            "^(/opt)")
+                -s "${PROJECT_BINARY_DIR}/" "${PROJECT_SOURCE_DIR}/"
+                -f "lang-all" "so" "a" "dylib" "dll"
+                -i "^-"
+                -e "^(@rpath).*")
         set(TIMEMORY_USE_CTP ON)
     else()
         set(TIMEMORY_USE_CTP OFF)
@@ -372,3 +361,7 @@ endif()
 foreach(_EXAMPLE_OPTION MPI TAU CUDA PAPI CUPTI KOKKOS CALIPER)
     set(_IGNORE ${USE_${_EXAMPLE_OPTION}})
 endforeach()
+
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    include(ConfigCPack)
+endif()
