--- a/docs/installation.md.in
+++ b/docs/installation.md.in
@@ -20,6 +20,7 @@
     - Dyninst
     - LIKWID
     - GOTCHA
+    - Perfetto
 
 | Description                 | Command                                                                  |
 | :-------------------------- | :----------------------------------------------------------------------- |
