New components + likwid fixes + performance improvement + other
- cpack support
- perfetto_trace component
- timestamp component
- printer component
- ring_buffer_allocator
- use ring buffer in bundles
- use ring_buffer_allocator in graph
- removed TIMEMORY_HOT_INLINE
- non-templated component::internal::user_bundle
- perfetto_category type-trait
- added ability to update statistics w/o popping
- removed runtime_enabled checks in add_secondary
- removed runtime_enabled check in audit
- fixed PAPI and LIKWID find package scripts
- updates to ex_cxx_overhead
- python tracer now has correct statistics
- ring_buffer_tests
- statistics tests
- update_stats in opaque
- vector_map in data_tracker
- BUG FIX: likwid_markerClose
- BUG FIX: likwid_nvmarkerClose
- policy::record_statistics::apply -> operator()
- removed TIMEMORY_NOCLONE usage
- deleted graph copy ctor and graph copy assign
- significant improvements to ring_buffer
- perfetto support in compiler instrumentation
- removed exit instrumentation in timemory-run

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -245,6 +245,12 @@ add_timemory_google_test(api_tests
                     timemory::timemory-core
                     ${_LIBRARY})
 
+add_timemory_google_test(ring_buffer_tests
+    SOURCES         ring_buffer_tests.cpp
+    LINK_LIBRARIES  common-test-libs
+                    ${_LIBRARY}
+                    test-werror-flags)
+
 add_timemory_google_test(type_trait_tests
     DISCOVER_TESTS
     SOURCES         type_trait_tests.cpp
