--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -77,8 +77,8 @@ struct kp_timemory_section
 //--------------------------------------------------------------------------------------//
 
 template <typename... Tp>
-std::enable_if_t<sizeof...(Tp) != 0, std::string>
-get_types_string(tim::component_tuple<Tp...>)
+std::enable_if_t<sizeof...(Tp) != 0, std::string> get_types_string(
+    tim::component_tuple<Tp...>)
 {
     return TIMEMORY_JOIN(" + ", tim::demangle<Tp>()...);
 }
@@ -86,8 +86,8 @@ get_types_string(tim::component_tuple<Tp...>)
 //--------------------------------------------------------------------------------------//
 
 template <typename... Tp>
-std::enable_if_t<sizeof...(Tp) == 0, std::string>
-get_types_string(tim::component_tuple<Tp...>)
+std::enable_if_t<sizeof...(Tp) == 0, std::string> get_types_string(
+    tim::component_tuple<Tp...>)
 {
     return TIMEMORY_JOIN("", "NONE [the requested types in ",
                          tim::demangle<profile_entry_t>(),
@@ -224,10 +224,10 @@ kokkosp_init_library(const int loadSeq, const uint64_t interfaceVer,
     timemory_ompt_library_ctor();
 
     printf("%s\n", spacer.c_str());
-    printf(
-        "# KokkosP: timemory Connector (sequence is %d, version: %llu, components: %s)\n",
-        loadSeq, (unsigned long long) interfaceVer,
-        get_types_string(profile_entry_t{}).c_str());
+    printf("# KokkosP: timemory Connector (sequence is %d, version: %llu, components: "
+           "%s)\n",
+           loadSeq, (unsigned long long) interfaceVer,
+           get_types_string(profile_entry_t{}).c_str());
     printf("%s\n\n", spacer.c_str());
 
     // timemory_init is expecting some args so generate some
