static_string + device::handle + gperftools + hipcc + kokkos papi
- static_string struct which hashes directly to const char*
- device::handle<T> provides basic scoped ctor start + stop
- namespace gperf --> gperftools
- backends/gperf.hpp --> backends/gperftools.hpp
- fixed hipcc overloading exp
- kokkos-connector handles unavailable presets
- papi_tests check presets
- add_hash_id alias no longer checks hash map ptr
- migrated most of hash related stuff to inline namespace hash
- removed constexpr from ctor of static_string

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -269,10 +269,11 @@ add_timemory_google_test(
     LINK_LIBRARIES common-test-libs timemory::timemory-core)
 
 if(UNIX)
-    add_timemory_google_test(
-        backtrace_tests
-        SOURCES backtrace_tests.cpp
-        LINK_LIBRARIES common-test-libs test-debug-flags timemory::timemory-core)
+    add_timemory_google_test(backtrace_tests
+        SOURCES         backtrace_tests.cpp
+        LINK_LIBRARIES  common-test-libs
+                        test-debug-flags
+                        $<IF:$<BOOL:${TIMEMORY_USE_COVERAGE}>,timemory::timemory-core,>)
 endif()
 
 list(APPEND component_bundle_tests_env "TIMEMORY_COLLAPSE_PROCESSES=OFF")
