--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -20,4 +20,7 @@ find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
 target_link_libraries(${EXE_NAME} timemory-cxx-tuple-example)
-install(TARGETS ${EXE_NAME} DESTINATION bin OPTIONAL)
+install(
+    TARGETS ${EXE_NAME}
+    DESTINATION bin
+    OPTIONAL)
