--- a/examples/ex-python/CMakeLists.txt
+++ b/examples/ex-python/CMakeLists.txt
@@ -65,7 +65,8 @@ find_package(
     COMPONENTS headers
     OPTIONAL_COMPONENTS mpi cxx shared)
 
-pybind11_add_module(libex_python_bindings THIN_LTO ${PROJECT_SOURCE_DIR}/libex_bindings.cpp)
+pybind11_add_module(libex_python_bindings THIN_LTO
+                    ${PROJECT_SOURCE_DIR}/libex_bindings.cpp)
 
 include(CheckCXXCompilerFlag)
 
