--- a/source/timemory/components/perfetto/CMakeLists.txt
+++ b/source/timemory/components/perfetto/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 if(TIMEMORY_USE_PERFETTO)
     set(NAME perfetto)
     set(DEPS timemory-perfetto)
@@ -6,15 +5,16 @@ if(TIMEMORY_USE_PERFETTO)
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-    build_intermediate_library(USE_INTERFACE
-        NAME                ${NAME}
-        TARGET              ${NAME}-component
-        CATEGORY            COMPONENT
-        FOLDER              components
-        HEADERS             ${header_files}
-        SOURCES             ${source_files} $<TARGET_OBJECTS:perfetto-object>
-        DEPENDS             ${DEPS}
-        PROPERTY_DEPENDS    GLOBAL)
+    build_intermediate_library(
+        USE_INTERFACE
+        NAME ${NAME}
+        TARGET ${NAME}-component
+        CATEGORY COMPONENT
+        FOLDER components
+        HEADERS ${header_files}
+        SOURCES ${source_files} $<TARGET_OBJECTS:perfetto-object>
+        DEPENDS ${DEPS}
+        PROPERTY_DEPENDS GLOBAL)
 
     list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/extern.cpp)
     timemory_install_header_files(${source_files})
