--- a/source/timemory/variadic/CMakeLists.txt
+++ b/source/timemory/variadic/CMakeLists.txt
@@ -2,12 +2,11 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
-    USE_INTERFACE
-    INSTALL_SOURCE
-    NAME                variadic
-    TARGET              common
-    CATEGORY            GLOBAL
-    FOLDER              components
-    HEADERS             ${header_files}
-    SOURCES             ${source_files}
-    DEPENDS             timemory::timemory-core)
+    USE_INTERFACE INSTALL_SOURCE
+    NAME variadic
+    TARGET common
+    CATEGORY GLOBAL
+    FOLDER components
+    HEADERS ${header_files}
+    SOURCES ${source_files}
+    DEPENDS timemory::timemory-core)
